[package]
name = "git-hooks"
version = "1.0.0"
authors = ["Niels Majer <niels.majer@gmail.com>"]

[dependencies]
git2 = "0.13"
regex = "1"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
